# kaggle_backpack

./: main.py  pyproject.toml  temp.py  test_to_submit.csv  test_to_submit.parquet  test_to_submit_2.csv  test_to_submit_3.csv  test_to_submit_4.csv
