[tool.poetry]
name = "kaggle_backpack"
version = "0.1.0"
description = "Creating firstkaggle submission"
authors = ["Daniel"]

[project]
name = "backpack"
version = "0.1.0"
description = ""
authors = [
    {name = "gavriely1",email = "daniel.gavriely@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle (>=1.7.4.2,<2.0.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
